added preferences data store to save theme setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="following">Following</string>
     <string name="not_found_data">Data tidak ditemukan</string>
     <string name="favorite">Favorite</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
